// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal can be centered 1`] = `
<div
  aria-modal="true"
  class="modal vfm vfm--fixed vfm--inset"
  role="dialog"
  style="z-index: 2000;"
>
  <transition-stub
    appear="true"
    css="true"
    name="vfm-fade"
    persisted="false"
  >
    <div
      aria-hidden="true"
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset vfm--prevent-none"
    />
  </transition-stub>
  <transition-stub
    appear="true"
    css="true"
    enteractiveclass="modal-zoom"
    entertoclass="modal-zoom-show"
    leaveactiveclass="modal-zoom"
    leavetoclass="modal-zoom"
    persisted="false"
  >
    <div
      class="vfm__content vfm--outline-none modal-dialog modal-dialog-scrollable modal-dialog-centered"
      tabindex="0"
    >
      
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
          >
            
            test modal header
            
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          
          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          
        </div>
        <!--v-if-->
      </div>
      
      <!---->
    </div>
  </transition-stub>
</div>
`;

exports[`Modal can be large 1`] = `
<div
  aria-modal="true"
  class="modal vfm vfm--fixed vfm--inset"
  role="dialog"
  style="z-index: 2000;"
>
  <transition-stub
    appear="true"
    css="true"
    name="vfm-fade"
    persisted="false"
  >
    <div
      aria-hidden="true"
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset vfm--prevent-none"
    />
  </transition-stub>
  <transition-stub
    appear="true"
    css="true"
    enteractiveclass="modal-zoom"
    entertoclass="modal-zoom-show"
    leaveactiveclass="modal-zoom"
    leavetoclass="modal-zoom"
    persisted="false"
  >
    <div
      class="vfm__content vfm--outline-none modal-dialog modal-dialog-scrollable modal-lg"
      tabindex="0"
    >
      
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
          >
            
            test modal header
            
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          
          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          
        </div>
        <!--v-if-->
      </div>
      
      <!---->
    </div>
  </transition-stub>
</div>
`;

exports[`Modal can be small 1`] = `
<div
  aria-modal="true"
  class="modal vfm vfm--fixed vfm--inset"
  role="dialog"
  style="z-index: 2000;"
>
  <transition-stub
    appear="true"
    css="true"
    name="vfm-fade"
    persisted="false"
  >
    <div
      aria-hidden="true"
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset vfm--prevent-none"
    />
  </transition-stub>
  <transition-stub
    appear="true"
    css="true"
    enteractiveclass="modal-zoom"
    entertoclass="modal-zoom-show"
    leaveactiveclass="modal-zoom"
    leavetoclass="modal-zoom"
    persisted="false"
  >
    <div
      class="vfm__content vfm--outline-none modal-dialog modal-dialog-scrollable modal-sm"
      tabindex="0"
    >
      
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
          >
            
            test modal header
            
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          
          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          
        </div>
        <!--v-if-->
      </div>
      
      <!---->
    </div>
  </transition-stub>
</div>
`;

exports[`Modal should be closable by clicking the backdrop by default 1`] = `
<div
  aria-modal="true"
  class="modal vfm vfm--fixed vfm--inset"
  role="dialog"
  style="z-index: 2000;"
>
  <transition-stub
    appear="true"
    css="true"
    name="vfm-fade"
    persisted="false"
  >
    <div
      aria-hidden="true"
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset vfm--prevent-none"
    />
  </transition-stub>
  <transition-stub
    appear="true"
    css="true"
    enteractiveclass="modal-zoom"
    entertoclass="modal-zoom-show"
    leaveactiveclass="modal-zoom"
    leavetoclass="modal-zoom"
    persisted="false"
  >
    <div
      class="vfm__content vfm--outline-none modal-dialog modal-dialog-scrollable"
      tabindex="0"
    >
      
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
          >
            
            test modal header
            
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          
          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          
        </div>
        <!--v-if-->
      </div>
      
      <!---->
    </div>
  </transition-stub>
</div>
`;

exports[`Modal should be closable using the ok-text button 1`] = `
<div
  class="vfm__content vfm--outline-none modal-dialog modal-dialog-scrollable"
  tabindex="0"
>
  
  <div
    class="modal-content"
  >
    <!--v-if-->
    <div
      class="modal-body"
    >
      
      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      
    </div>
    <div
      class="modal-footer"
    >
      <button
        class="btn btn-primary"
      >
        test OK button
      </button>
    </div>
  </div>
  
  <!---->
</div>
`;

exports[`Modal should not be closable by clicking the backdrop if backdrop is set as false 1`] = `
<div
  aria-modal="true"
  class="modal vfm vfm--fixed vfm--inset"
  role="dialog"
  style="z-index: 2000;"
>
  <transition-stub
    appear="true"
    css="true"
    name="vfm-fade"
    persisted="false"
  >
    <div
      aria-hidden="true"
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset vfm--prevent-none"
    />
  </transition-stub>
  <transition-stub
    appear="true"
    css="true"
    enteractiveclass="modal-zoom"
    entertoclass="modal-zoom-show"
    leaveactiveclass="modal-zoom"
    leavetoclass="modal-zoom"
    persisted="false"
  >
    <div
      class="vfm__content vfm--outline-none modal-dialog modal-dialog-scrollable"
      tabindex="0"
    >
      
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
          >
            
            test modal header
            
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          
          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          
        </div>
        <!--v-if-->
      </div>
      
      <!---->
    </div>
  </transition-stub>
</div>
`;

exports[`Modal should not show footer when no footer is given 1`] = `
<div
  aria-modal="true"
  class="modal vfm vfm--fixed vfm--inset"
  role="dialog"
  style="z-index: 2000;"
>
  <transition-stub
    appear="true"
    css="true"
    name="vfm-fade"
    persisted="false"
  >
    <div
      aria-hidden="true"
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset vfm--prevent-none"
    />
  </transition-stub>
  <transition-stub
    appear="true"
    css="true"
    enteractiveclass="modal-zoom"
    entertoclass="modal-zoom-show"
    leaveactiveclass="modal-zoom"
    leavetoclass="modal-zoom"
    persisted="false"
  >
    <div
      class="vfm__content vfm--outline-none modal-dialog modal-dialog-scrollable"
      tabindex="0"
    >
      
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
          >
            
            test modal header
            
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          
          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          
        </div>
        <!--v-if-->
      </div>
      
      <!---->
    </div>
  </transition-stub>
</div>
`;

exports[`Modal should not show header when no header is given 1`] = `
<div
  aria-modal="true"
  class="modal vfm vfm--fixed vfm--inset"
  role="dialog"
  style="z-index: 2000;"
>
  <transition-stub
    appear="true"
    css="true"
    name="vfm-fade"
    persisted="false"
  >
    <div
      aria-hidden="true"
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset vfm--prevent-none"
    />
  </transition-stub>
  <transition-stub
    appear="true"
    css="true"
    enteractiveclass="modal-zoom"
    entertoclass="modal-zoom-show"
    leaveactiveclass="modal-zoom"
    leavetoclass="modal-zoom"
    persisted="false"
  >
    <div
      class="vfm__content vfm--outline-none modal-dialog modal-dialog-scrollable"
      tabindex="0"
    >
      
      <div
        class="modal-content"
      >
        <!--v-if-->
        <div
          class="modal-body"
        >
          
          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          
        </div>
        <div
          class="modal-footer"
        >
          
          test modal footer
          
        </div>
      </div>
      
      <!---->
    </div>
  </transition-stub>
</div>
`;

exports[`Modal should show footer when both footer and ok-text are given 1`] = `
<div
  aria-modal="true"
  class="modal vfm vfm--fixed vfm--inset"
  role="dialog"
  style="z-index: 2000;"
>
  <transition-stub
    appear="true"
    css="true"
    name="vfm-fade"
    persisted="false"
  >
    <div
      aria-hidden="true"
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset vfm--prevent-none"
    />
  </transition-stub>
  <transition-stub
    appear="true"
    css="true"
    enteractiveclass="modal-zoom"
    entertoclass="modal-zoom-show"
    leaveactiveclass="modal-zoom"
    leavetoclass="modal-zoom"
    persisted="false"
  >
    <div
      class="vfm__content vfm--outline-none modal-dialog modal-dialog-scrollable"
      tabindex="0"
    >
      
      <div
        class="modal-content"
      >
        <!--v-if-->
        <div
          class="modal-body"
        >
          
          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          
        </div>
        <div
          class="modal-footer"
        >
          
          test modal footer
          
        </div>
      </div>
      
      <!---->
    </div>
  </transition-stub>
</div>
`;

exports[`Modal supports fade effect 1`] = `
<div
  aria-modal="true"
  class="modal vfm vfm--fixed vfm--inset"
  role="dialog"
  style="z-index: 2000;"
>
  <transition-stub
    appear="true"
    css="true"
    name="vfm-fade"
    persisted="false"
  >
    <div
      aria-hidden="true"
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset vfm--prevent-none"
    />
  </transition-stub>
  <transition-stub
    appear="true"
    css="true"
    name="vfm"
    persisted="false"
  >
    <div
      class="vfm__content vfm--outline-none modal-dialog modal-dialog-scrollable"
      tabindex="0"
    >
      
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
          >
            
            test modal header
            
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          
          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          
        </div>
        <!--v-if-->
      </div>
      
      <!---->
    </div>
  </transition-stub>
</div>
`;
